fix: wrap BoardComponent to align scroll behavior with mockup design

--- a/src/app/main-pages/board/board.component.scss
+++ b/src/app/main-pages/board/board.component.scss
@@ -2,12 +2,16 @@
 @use "../../../styles/mixins" as *;
 @use "../../../styles/variables" as *;
 
+.board-wrapper {
+  overflow: auto;
+  height: calc(100vh - 100px);
+}
+
 .board-container {
   padding: 20px;
   padding-right: 0;
   height: calc(100vh - 100px);
-  overflow: hidden;
-  
+  // overflow: hidden;
 
   @media (max-width: 768px) {
     padding: 16px;
@@ -287,7 +291,6 @@ h1 {
 .board-columns {
   @include dFlex($jc: flex-start, $ai: flex-start, $g: 2px);
   overflow-x: auto;
-  // padding-bottom: 60px;
   height: calc(100% - 70px);
   overflow-y: hidden;
 }
@@ -395,49 +398,7 @@ h1 {
 }
 // #endregion
 
-// #region media queries
-@media (max-width: 1200px) {
-  .board-container {
-    height: calc(100vh - 176px);
-  }
-}
-
-@media (max-width: 768px) {
-  .board-columns {
-    @include dFlex($fd: column, $ai: flex-start, $jc: flex-start);
-    width: 100%;
-    overflow-x: hidden;
-    height: calc(100% - 160px);
-    overflow-y: auto;
-  }
-
-  .column-header {
-    width: 100%;
-    margin-bottom: 10px;
-    padding-left: 4px;
-  }
-
-  .column {
-    align-items: flex-start;
-    padding-bottom: 8px;
-    width: 100%;
-  }
-
-  .empty-column {
-    width: 100%;
-  }
-
-  .column-content {
-    flex-direction: row;
-    align-items: flex-start;
-    height: auto; 
-    overflow-x: auto; 
-    overflow-y: hidden; 
-    width: 100%; 
-  }
-}
-// #endregion
-
+// #region overlays
 .overlay-background {
   position: fixed;
   top: 0;
@@ -458,7 +419,7 @@ h1 {
   border-radius: 30px;
   transform: translateX(100%);
   animation: slideIn 0.3s ease-out forwards;
-  >div:nth-child(1) {
+  > div:nth-child(1) {
     justify-self: flex-end;
     width: 24px;
     height: 24px;
@@ -469,7 +430,7 @@ h1 {
       background-color: $lighter-grey;
     }
   }
-  >div:nth-child(2) {
+  > div:nth-child(2) {
     align-self: flex-end;
     height: 670px;
     overflow: auto;
@@ -495,3 +456,55 @@ h1 {
     transform: translateX(0);
   }
 }
+// #endregion
+
+// #region media queries
+@media (max-width: 1200px) {
+  .board-wrapper {
+    height: calc(100vh - 176px);
+  }
+
+  .board-container {
+    height: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .board-wrapper {
+    overflow: auto;
+  }
+
+  .board-columns {
+    @include dFlex($fd: column, $ai: flex-start, $jc: flex-start);
+    width: 100%;
+    overflow-x: hidden;
+    // height: calc(100% - 160px);
+    height: fit-content;
+  }
+
+  .column-header {
+    width: 100%;
+    margin-bottom: 10px;
+    padding-left: 4px;
+  }
+
+  .column {
+    align-items: flex-start;
+    padding-bottom: 8px;
+    width: 100%;
+  }
+
+  .column-content {
+    flex-direction: row;
+    align-items: flex-start;
+    height: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
+    width: 100%;
+  }
+
+  .empty-column {
+    width: calc(100% - 16px);
+  }
+}
+// #endregion
